diversity modal on Mobile -- fixed on templates + JS

--- a/wp-content/themes/brown-rudnick-main/assets/scss/global/_styles.scss
+++ b/wp-content/themes/brown-rudnick-main/assets/scss/global/_styles.scss
@@ -1260,6 +1260,10 @@ img.insights {
 	}
 }
 
+#diversity--modal--close {
+	right: 8px !important;
+}
+
 .modal__background {
     position: fixed;
     top: 0;
