--- a/wp-content/themes/brown-rudnick-main/assets/stylesheets/foundation.css
+++ b/wp-content/themes/brown-rudnick-main/assets/stylesheets/foundation.css
@@ -1280,6 +1280,9 @@ img.insights {
   padding: 40px !important;
   background-color: #fefefe; }
 
+#diversity--modal--close {
+  right: 8px !important; }
+
 .modal__background {
   position: fixed;
   top: 0;
